# LLM_practical_course

./: .gitignore  3_2_Решение_задач.ipynb  4_1_Решение_задач.ipynb  4_2_Решение_задач.ipynb  math_tools.py  pyproject.toml  solve_math_direct.py  Задача_3_1.ipynb  задачи_4_3_.ipynb
notebooks/: 2_1_8_solution.csv  2_1_Решение_задач.ipynb  M1_Welcome.ipynb  M2.1_Prompt_Engineering_intro.ipynb  M2.2_LangChain_Prompting.ipynb  M3_LangChain_Agents_intro.ipynb  M3_LangChain_Chains.ipynb
