[tool.poetry]
name = "stepik"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = "^2.1.0"
pandas = "^2.0.0"
scikit-learn = "^1.6.1"
catboost = "^1.2.7"
optuna = "^4.2.0"
matplotlib = "^3.5.0"
polars = "^1.22.0" # Понижаем версию

nbformat = "^5.9.2"  # Добавляем nbformat
plotly = "^5.19.0"   # Добавляем plotly
ipywidgets = "^8.1.1" # Для интерактивных виджетов
jupyter = "^1.0.0"    # Для работы с Jupyter notebooks
 
opencv-python = "^4.11.0.86"
python-dotenv = "^1.0.1"
fastexcel = "^0.12.1"
psycopg = "^3.2.4"
xmltodict = "^0.14.2"
pyarrow = "^19.0.0"
seaborn = "^0.13.2"
connectorx = "^0.4.2"
psycopg2-binary = "^2.9.10"
phik = "^0.12.4"
altair = "^5.5.0"
boruta = "^0.4.3"
openai = "^1.76.0"
langchain = "^0.3.24"
huggingface-hub = {extras = ["hf-xet"], version = "^0.30.2"}
langchain-openai = "^0.3.14"
langchain-community = "^0.3.22"
transformers = "^4.51.3"
langchain-huggingface = "^0.1.2"
llama-cpp-python = "^0.3.8"
gguf = "^0.16.2"
langchain-experimental = "^0.3.4"
numexpr = "^2.10.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"